Update templates, address JEP deprecations and place a few TODOs